--- a/Sandbox/Sandbox_Notebook.ipynb
+++ b/Sandbox/Sandbox_Notebook.ipynb
@@ -2,18 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "3b19eb4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "222b3623",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiColumnLabelEncoder:\n",
+    "    def __init__(self, columns=None):\n",
+    "        self.columns = columns  # array of column names to encode\n",
+    "\n",
+    "    def fit(self, x, y=None):\n",
+    "        return self  # not relevant here\n",
+    "\n",
+    "    def transform(self, x):\n",
+    "        \"\"\"\n",
+    "        Transforms columns of X specified in self.columns using\n",
+    "        LabelEncoder(). If no columns specified, transforms all\n",
+    "        columns in X.\n",
+    "        \"\"\"\n",
+    "        output = x.copy()\n",
+    "        if self.columns is not None:\n",
+    "            for col in self.columns:\n",
+    "                output[col] = LabelEncoder().fit_transform(output[col])\n",
+    "        else:\n",
+    "            for colname, col in output.iteritems():\n",
+    "                output[colname] = LabelEncoder().fit_transform(col)\n",
+    "        return output\n",
+    "\n",
+    "    def fit_transform(self, x, y=None):\n",
+    "        return self.fit(x, y).transform(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "21d92791",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_preprocessor_lin_regression(raw_dataset):\n",
+    "    \"\"\"\n",
+    "    Function that preprocesses the raw data to conform to the format required of the linear regression ML algorithm.\n",
+    "    :param raw_dataset: pandas dataframe object.\n",
+    "    :return: pandas dataframe\n",
+    "    \"\"\"\n",
+    "    # Drop NA values in dataset.\n",
+    "    preprocessed_data_lin_reg_drop_na = raw_dataset.dropna()\n",
+    "\n",
+    "    preprocessed_data_lin_reg = MultiColumnLabelEncoder \\\n",
+    "        (columns=['gender', 'Partner', 'Dependents', 'PhoneService', 'MultipleLines',\n",
+    "                  'InternetService', 'OnlineSecurity', 'OnlineBackup', 'DeviceProtection',\n",
+    "                  'TechSupport', 'StreamingTV', 'StreamingMovies', 'Contract',\n",
+    "                  'PaperlessBilling', 'PaymentMethod', 'Churn']).fit_transform(preprocessed_data_lin_reg_drop_na)\n",
+    "\n",
+    "    return preprocessed_data_lin_reg"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a7aff5c7",
+   "id": "a9440a8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "37278977",
+   "id": "1958b424",
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +160,81 @@
    ],
    "source": [
     "print(raw_dataset_telco)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6472dd79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "      gender  SeniorCitizen  Partner  Dependents  tenure  PhoneService  \\\n",
+      "0          0              0        1           0       1             0   \n",
+      "1          1              0        0           0      34             1   \n",
+      "2          1              0        0           0       2             1   \n",
+      "3          1              0        0           0      45             0   \n",
+      "4          0              0        0           0       2             1   \n",
+      "...      ...            ...      ...         ...     ...           ...   \n",
+      "7038       1              0        1           1      24             1   \n",
+      "7039       0              0        1           1      72             1   \n",
+      "7040       0              0        1           1      11             0   \n",
+      "7041       1              1        1           0       4             1   \n",
+      "7042       1              0        0           0      66             1   \n",
+      "\n",
+      "      MultipleLines  InternetService  OnlineSecurity  OnlineBackup  \\\n",
+      "0                 1                0               0             2   \n",
+      "1                 0                0               2             0   \n",
+      "2                 0                0               2             2   \n",
+      "3                 1                0               2             0   \n",
+      "4                 0                1               0             0   \n",
+      "...             ...              ...             ...           ...   \n",
+      "7038              2                0               2             0   \n",
+      "7039              2                1               0             2   \n",
+      "7040              1                0               2             0   \n",
+      "7041              2                1               0             0   \n",
+      "7042              0                1               2             0   \n",
+      "\n",
+      "      DeviceProtection  TechSupport  StreamingTV  StreamingMovies  Contract  \\\n",
+      "0                    0            0            0                0         0   \n",
+      "1                    2            0            0                0         1   \n",
+      "2                    0            0            0                0         0   \n",
+      "3                    2            2            0                0         1   \n",
+      "4                    0            0            0                0         0   \n",
+      "...                ...          ...          ...              ...       ...   \n",
+      "7038                 2            2            2                2         1   \n",
+      "7039                 2            0            2                2         1   \n",
+      "7040                 0            0            0                0         0   \n",
+      "7041                 0            0            0                0         0   \n",
+      "7042                 2            2            2                2         2   \n",
+      "\n",
+      "      PaperlessBilling  PaymentMethod  MonthlyCharges TotalCharges  \n",
+      "0                    1              2           29.85        29.85  \n",
+      "1                    0              3           56.95       1889.5  \n",
+      "2                    1              3           53.85       108.15  \n",
+      "3                    0              0           42.30      1840.75  \n",
+      "4                    1              2           70.70       151.65  \n",
+      "...                ...            ...             ...          ...  \n",
+      "7038                 1              3           84.80       1990.5  \n",
+      "7039                 1              1          103.20       7362.9  \n",
+      "7040                 1              2           29.60       346.45  \n",
+      "7041                 1              3           74.40        306.6  \n",
+      "7042                 1              0          105.65       6844.5  \n",
+      "\n",
+      "[7043 rows x 19 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Preprocess raw data for Linear Regression.\n",
+    "preprocessed_data_lin_reg_telco = data_preprocessor_lin_regression(raw_dataset_telco)\n",
+    "data_columns = len(preprocessed_data_lin_reg_telco.columns)\n",
+    "print(data_columns)\n",
+    "print(preprocessed_data_lin_reg_telco.iloc[:,1:-1])"
    ]
   }
  ],
