Added basic logistic regression model and made improvements to train/test splitting function using sklearn

--- a/Sandbox/Sandbox_Notebook.ipynb
+++ b/Sandbox/Sandbox_Notebook.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "222b3623",
+   "id": "46e04544",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "21d92791",
+   "id": "121bcbd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a9440a8c",
+   "id": "a52e931f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1958b424",
+   "id": "7700a9b7",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6472dd79",
+   "id": "08f31d20",
    "metadata": {},
    "outputs": [
     {
@@ -236,6 +236,80 @@
     "print(data_columns)\n",
     "print(preprocessed_data_lin_reg_telco.iloc[:,1:-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "8f8fc476",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            gender  SeniorCitizen      Partner   Dependents       tenure  \\\n",
+      "count  7043.000000    7043.000000  7043.000000  7043.000000  7043.000000   \n",
+      "mean      0.504756       0.162147     0.483033     0.299588    32.371149   \n",
+      "std       0.500013       0.368612     0.499748     0.458110    24.559481   \n",
+      "min       0.000000       0.000000     0.000000     0.000000     0.000000   \n",
+      "25%       0.000000       0.000000     0.000000     0.000000     9.000000   \n",
+      "50%       1.000000       0.000000     0.000000     0.000000    29.000000   \n",
+      "75%       1.000000       0.000000     1.000000     1.000000    55.000000   \n",
+      "max       1.000000       1.000000     1.000000     1.000000    72.000000   \n",
+      "\n",
+      "       PhoneService  MultipleLines  InternetService  OnlineSecurity  \\\n",
+      "count   7043.000000    7043.000000      7043.000000     7043.000000   \n",
+      "mean       0.903166       0.940508         0.872923        0.790004   \n",
+      "std        0.295752       0.948554         0.737796        0.859848   \n",
+      "min        0.000000       0.000000         0.000000        0.000000   \n",
+      "25%        1.000000       0.000000         0.000000        0.000000   \n",
+      "50%        1.000000       1.000000         1.000000        1.000000   \n",
+      "75%        1.000000       2.000000         1.000000        2.000000   \n",
+      "max        1.000000       2.000000         2.000000        2.000000   \n",
+      "\n",
+      "       OnlineBackup  DeviceProtection  TechSupport  StreamingTV  \\\n",
+      "count   7043.000000       7043.000000  7043.000000  7043.000000   \n",
+      "mean       0.906432          0.904444     0.797104     0.985376   \n",
+      "std        0.880162          0.879949     0.861551     0.885002   \n",
+      "min        0.000000          0.000000     0.000000     0.000000   \n",
+      "25%        0.000000          0.000000     0.000000     0.000000   \n",
+      "50%        1.000000          1.000000     1.000000     1.000000   \n",
+      "75%        2.000000          2.000000     2.000000     2.000000   \n",
+      "max        2.000000          2.000000     2.000000     2.000000   \n",
+      "\n",
+      "       StreamingMovies     Contract  PaperlessBilling  PaymentMethod  \\\n",
+      "count      7043.000000  7043.000000       7043.000000    7043.000000   \n",
+      "mean          0.992475     0.690473          0.592219       1.574329   \n",
+      "std           0.885091     0.833755          0.491457       1.068104   \n",
+      "min           0.000000     0.000000          0.000000       0.000000   \n",
+      "25%           0.000000     0.000000          0.000000       1.000000   \n",
+      "50%           1.000000     0.000000          1.000000       2.000000   \n",
+      "75%           2.000000     1.000000          1.000000       2.000000   \n",
+      "max           2.000000     2.000000          1.000000       3.000000   \n",
+      "\n",
+      "       MonthlyCharges        Churn  \n",
+      "count     7043.000000  7043.000000  \n",
+      "mean        64.761692     0.265370  \n",
+      "std         30.090047     0.441561  \n",
+      "min         18.250000     0.000000  \n",
+      "25%         35.500000     0.000000  \n",
+      "50%         70.350000     0.000000  \n",
+      "75%         89.850000     1.000000  \n",
+      "max        118.750000     1.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(preprocessed_data_lin_reg_telco.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8decdedc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
