Added Decision Tree Classification model with evaluation R squared value dict of all three models

--- a/Sandbox/Sandbox_Notebook.ipynb
+++ b/Sandbox/Sandbox_Notebook.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "46e04544",
+   "id": "2c8a1f22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "121bcbd9",
+   "id": "c7e39de2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a52e931f",
+   "id": "d421ad8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7700a9b7",
+   "id": "efd1134f",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "08f31d20",
+   "id": "457fd337",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "8f8fc476",
+   "id": "f54d4122",
    "metadata": {},
    "outputs": [
     {
@@ -305,8 +305,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "id": "a572d86c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores_dict = {'Linear Regression': 4, 'Logistic Regression': 5,\n",
+    "                   'Decision Tree': 6}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "7007a5ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_dict[max(scores_dict)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8decdedc",
+   "id": "9387ad62",
    "metadata": {},
    "outputs": [],
    "source": []
